--- a/texttop/style.scss
+++ b/texttop/style.scss
@@ -246,6 +246,7 @@ main {
     }
 
     p:last-of-type {
+      margin: 1em 0 0 0;
       font-size: 1.1rem;
       display: grid;
       @media #{$medium} {
