intersection-observer on safari

--- a/style.scss
+++ b/style.scss
@@ -490,6 +490,7 @@ main {
       box-shadow: 0 0.1em 0.4em -0.1em rgba(darken($bgcol, 50%), 0.85);
       pointer-events: none;
       z-index: 6;
+      position: relative;
     }
     .blank_for_scroll {
       opacity: 0;
