--- a/style.scss
+++ b/style.scss
@@ -235,6 +235,7 @@ main {
     top: 0;
     display: grid;
     grid-template-rows: auto 1fr auto;
+    z-index: -1;
   }
 
   .h3 {
@@ -461,7 +462,7 @@ main {
     margin: 0 1em 0 1em;
     pointer-events: none;
     z-index: 5;
-    position: relative;
+    opacity: 0.99;
 
     @media #{$medium} {
       margin: 0 -5% 0 calc(50% + 3em);
@@ -490,7 +491,6 @@ main {
       box-shadow: 0 0.1em 0.4em -0.1em rgba(darken($bgcol, 50%), 0.85);
       pointer-events: none;
       z-index: 6;
-      position: relative;
     }
     .blank_for_scroll {
       opacity: 0;
