--- a/style.scss
+++ b/style.scss
@@ -203,6 +203,7 @@ main {
   font-size: 0.9em;
   transition: background-color 0.5s;
   border-radius: 0 0.5em 0.5em 0;
+  opacity: 0.99;
 
   &:first-of-type {
     border-radius: 0.5em 0 0 0.5em;
@@ -243,6 +244,7 @@ main {
     font-size: 1rem;
     grid-row: 1 / 2;
     grid-column: 1 / -1;
+    z-index: 1;
 
     p {
       margin: 0 0 0.5em 0;
@@ -299,6 +301,7 @@ main {
     grid-gap: 2em;
     grid-template-rows: 1fr;
     grid-template-columns: 1.61fr 1fr;
+    z-index: 1;
 
     @media #{$mobile} {
       grid-template-rows: 1fr auto;
@@ -463,6 +466,7 @@ main {
     pointer-events: none;
     z-index: 5;
     opacity: 0.99;
+    position: relative;
 
     @media #{$medium} {
       margin: 0 -5% 0 calc(50% + 3em);
@@ -477,6 +481,7 @@ main {
       margin: 1em 0 1em 1em;
       pointer-events: auto;
       z-index: 6;
+      opacity: 0.99;
 
       span.h4_sphere {
         color: $blue;
@@ -492,6 +497,8 @@ main {
       box-shadow: 0 0.1em 0.4em -0.1em rgba(darken($bgcol, 50%), 0.85);
       pointer-events: none;
       z-index: 6;
+      opacity: 0.99;
+      position: relative;
     }
     .blank_for_scroll {
       opacity: 0;
