--- a/style.scss
+++ b/style.scss
@@ -237,7 +237,7 @@ main {
     display: grid;
     grid-template-rows: auto 1fr auto;
     z-index: 0;
-    transform: translate3d(0,0,0);
+    //transform: translate3d(0,0,0);
   }
 
   .h3 {
