--- a/style.scss
+++ b/style.scss
@@ -21,6 +21,8 @@ $max_height_medium: 'screen and (max-height: 850px)';
 html {
   height: 100%;
   width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 body {
