--- a/style.scss
+++ b/style.scss
@@ -226,6 +226,8 @@ main {
   margin: 1em 1em 0 1em;
   transition: color 0.5s, fill 0.5s, stroke 0.5s, background-color 0.5s;
   position: relative;
+  width: 100%;
+  height: 100%;
 
   @media #{$medium} {
     margin: 1em 5% 0 10%;
