--- a/style.scss
+++ b/style.scss
@@ -226,8 +226,8 @@ main {
   margin: 1em 1em 0 1em;
   transition: color 0.5s, fill 0.5s, stroke 0.5s, background-color 0.5s;
   position: relative;
-  width: 100%;
-  height: 100%;
+  //width: 100%;
+  //height: 100%;
 
   @media #{$medium} {
     margin: 1em 5% 0 10%;
@@ -474,7 +474,7 @@ main {
     margin: 0 1em 0 1em;
     pointer-events: none;
     transform:translate3d(0,0,0);
-    //z-index: 5;
+    z-index: 5;
 
     @media #{$medium} {
       margin: 0 -5% 0 calc(50% + 3em);
