--- a/style.scss
+++ b/style.scss
@@ -335,6 +335,7 @@ main {
       svg {
         display: block;
         overflow: visible;
+        width: calc(100% - 1em);
       }
 
       .e-source {
@@ -393,6 +394,9 @@ main {
       margin: 0;
 
       svg {
+        display: block;
+        width: 100%;
+        height: 100%;
         overflow: visible;
       }
 
