--- a/style.scss
+++ b/style.scss
@@ -780,6 +780,9 @@ section.dark {
 
     svg {
       overflow: visible;
+      display: block;
+      width: 100%;
+      height: 100%;
     }
   }
 
