--- a/style.scss
+++ b/style.scss
@@ -89,7 +89,7 @@ header {
 
   h2 {
     font-size: 1em;
-    font-weight: 600;
+    font-weight: 400;
     line-height: 1.6;
     margin: 2em 1em 2em 1em;
 
@@ -101,12 +101,18 @@ header {
       margin: 0 0 0.5em 0;
     }
 
+    p.green {
+      color: $blue;
+      font-weight: 600;
+    }
+
     span {
       color: $green;
       font-weight: 800;
-      &.green {
-        font-size: 2em;
-      }
+      font-size: 1.25em;
+      // &.green {
+      //   font-size: 2em;
+      // }
     }
   }
 }
